[package]
name = "blooming_light"
version = "0.1.0"
edition = "2021"
authors = ["Golden_Water <golden_water@chaosw.site>"]

[dependencies]
anyhow = { version = "1.0.90", features = ["backtrace"] }
axum = { version = "0.8.0-alpha.1", features = ["ws", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
delegate = "0.13.1"
dotenv = "0.15.0"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",
    "persistence",
    "puffin",
    "wgpu",
] }
egui_extras = "0.29.1"
futures-util = "0.3.31"
puffin = "0.19.1"
puffin_http = "0.16.1"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-util = { version = "0.7.12", features = ["full"] }
tower-http = { version = "0.6.1", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
